# CGraphBFB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Graph.hpp  Junction.hpp  Segment.hpp  Vertex.hpp  bfb_algorithm.hpp  bfb_calculator.hpp  file_reader.hpp  foldback_algorithm.hpp  httphandler.h  traverse_algorithm.hpp
src/: Edge.cpp  Graph.cpp  Junction.cpp  Segment.cpp  Vertex.cpp  bfb_algorithm.cpp  bfb_calculator.cpp  file_reader.cpp  foldback_algorithm.cpp  httphandler.cpp  httpserver.cpp  main.cpp  traverse_algorithm.cpp
static/: main.py  sim.lh  sim_1.lh  sim_2.lh  vcf.csv
